--- a/UI/ui/templates/broker/broker_forgot_password.html
+++ b/UI/ui/templates/broker/broker_forgot_password.html
@@ -17,7 +17,7 @@
       {% if step == 'email' %}
         <input type="hidden" name="step" value="email">
         <div class="mb-3">
-          <label for="email" class="form-label">Enter your email</label>
+          <label for="email" class="form-label">Enter your email address</label>
           <input type="email" class="form-control" name="email" required>
         </div>
         <button type="submit" class="btn btn-primary w-100">Send Reset Code</button>
@@ -36,6 +36,14 @@
         <input type="hidden" name="email" value="{{ email }}">
         <div class="mb-3">
           <label for="new_password" class="form-label">Enter new password</label>
+          <label class="form-label">
+            Password must meet the following criteria:
+            <br> -> At least 16 characters in length
+            <br> -> At least one upper case letter
+            <br> -> At least one lower case letter
+            <br> -> At least one number
+            <br> -> At least one symbol from the following set: ! % & * @ ?
+          </label>
           <input type="password" class="form-control" name="new_password" required>
         </div>
         <button type="submit" class="btn btn-success w-100">Reset Password</button>
