--- a/UI/ui/templates/broker/broker_master.html
+++ b/UI/ui/templates/broker/broker_master.html
@@ -1,60 +1,29 @@
-<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
-  </head>
-  <body>
-    {% if not hide_nav %}
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarNav"
-                  aria-controls="navbarNav"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'broker_dashboard' %}">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'broker_customer' %}">Customers</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'broker_commission' %}">Commissions</a>
-              </li>
-            </ul>
+{% extends "master.html" %}
 
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <form method="POST" action="{% url 'logout' 'broker' %}">
-                  {% csrf_token %}
-                  <button type="submit" class="btn btn-outline-danger nav-link border-0 bg-transparent">
-                    Logout
-                  </button>
-                </form>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    {% endif %}
-    
-    {% block content %}
-    {% endblock %}
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-  </body>
-</html>
+{% block navbar %}
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'broker_dashboard' %}">Dashboard</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'broker_customer' %}">Customers</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'broker_commission' %}">Commissions</a>
+    </li>
+  </ul>
+
+  <ul class="navbar-nav ms-auto">
+    <li class="nav-item">
+      <form method="POST" action="{% url 'logout' 'broker' %}">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-outline-danger nav-link border-0 bg-transparent">
+          Logout
+        </button>
+      </form>
+    </li>
+  </ul>
+{% endblock %}
+  
+{% block content %}
+{% endblock %}
