--- a/UI/ui/templates/master.html
+++ b/UI/ui/templates/master.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Energy Supplier Portal</title>
+    <title>{% block title %}Energy Supplier Portal{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -11,31 +11,35 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'broker_login' %}">Broker Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'customer_login' %}">Customer Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'internal_login' %}">Internal Login</a>
-            </li>
-          </ul>
+    {% if not hide_nav %}
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#navbarNav"
+                  aria-controls="navbarNav"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            {% block navbar %}
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'broker_login' %}">Broker Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'customer_login' %}">Customer Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'internal_login' %}">Internal Login</a>
+                </li>
+              </ul>
+            {% endblock %}
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    {% endif %}
     
     {% block content %}
     {% endblock %}
