--- a/UI/ui/templates/broker/broker_login.html
+++ b/UI/ui/templates/broker/broker_login.html
@@ -15,6 +15,14 @@
         </div>
       {% endif %}
 
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-warning">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+
       <form method="POST" action="{% url 'broker_login' %}">
         {% csrf_token %}
         <div class="mb-3">
