--- a/UI/ui/templates/master.html
+++ b/UI/ui/templates/master.html
@@ -12,35 +12,9 @@
   </head>
   <body>
     {% if not hide_nav %}
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarNav"
-                  aria-controls="navbarNav"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            {% block navbar %}
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'broker_login' %}">Broker Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'customer_login' %}">Customer Login</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'internal_login' %}">Internal Login</a>
-                </li>
-              </ul>
-            {% endblock %}
-          </div>
-        </div>
-      </nav>
+      {% include "navbar/"|add:navbar_type|add:"_navbar.html" %}
     {% endif %}
-    
+
     {% block content %}
     {% endblock %}
     
