--- a/UI/ui/templates/internal/entity_detail.html
+++ b/UI/ui/templates/internal/entity_detail.html
@@ -5,22 +5,39 @@
 {% endblock %}
 
 {% block content %}
-<h2>{{ entity_name }} Detail - ID: {{ entity_id }}</h2>
+<h2 class="mb-4">{{ entity_name }} Detail - ID: {{ entity_id }}</h2>
 
-{% if detail %}
-    <table>
-        <tbody>
-            {% for key, value in detail.items %}
-                <tr>
-                    <th style="text-align:left; padding: 8px;">{{ key }}</th>
-                    <td style="padding: 8px;">{{ value }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-{% else %}
-    <p>No detail found for ID {{ entity_id }}.</p>
-{% endif %}
-
-<a href="{% url 'entity_list_view' route=route %}" class="btn">Back to List</a>
+<div class="container d-flex justify-content-center">
+    <div class="table-responsive shadow-sm rounded" style="width: 100%;">
+        {% if detail %}
+            <table class="table table-bordered table-striped align-middle">
+                <thead class="table-light">
+                    <tr>
+                        <th scope="col" style="width: 1%;">ID</th>
+                        <th scope="col">Attribute</th>
+                        <th scope="col">Description</th>
+                        <th scope="col" style="width: 1%;">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for key, value in detail.items %}
+                    <tr>
+                        <th class="text-nowrap">{{ key }}</th>
+                        <td>{{ value.Attribute }}</td>
+                        <td>{{ value.Description }}</td>
+                        <td></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <div class="alert alert-warning" role="alert">
+                No detail found for ID {{ entity_id }}.
+            </div>
+        {% endif %}
+        <div class="mt-3">
+            <a href="{% url 'entity_list_view' route=route %}" class="btn btn-secondary">Back to List</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
