--- a/UI/ui/templates/internal/entity_list.html
+++ b/UI/ui/templates/internal/entity_list.html
@@ -25,12 +25,18 @@
                     <td class="text-nowrap">{{ item.Id }}</td>
                     <td>{{ item.Name }}</td>
                     <td class="text-nowrap">
-                        <a href="{% url 'entity_detail_view' route=entity_name|lower entity_id=item|get_item:'Id' %}?name={{ item|get_item:'Name'|urlencode }}&entity={{ entity_name }}" class="btn btn-sm btn-primary">
-                            Edit
-                        </a>
-                        <a href="" class="btn btn-sm btn-danger">
-                            Delete
-                        </a>
+                        {% if item.Id == -1 %}
+                            <a href="{% url 'entity_add_view' route=entity_name|lower %}?name={{ item|get_item:'Name'|urlencode }}&entity={{ entity_name }}" class="btn btn-sm btn-success">
+                                Add
+                            </a>
+                        {% else %}
+                            <a href="{% url 'entity_detail_view' route=entity_name|lower entity_id=item|get_item:'Id' %}?name={{ item|get_item:'Name'|urlencode }}&entity={{ entity_name }}" class="btn btn-sm btn-primary">
+                                Edit
+                            </a>
+                            <a href="" class="btn btn-sm btn-danger">
+                                Delete
+                            </a>
+                        {% endif %}
                     </td>
                 </tr>
                 {% endfor %}
