--- a/UI/ui/templates/internal/entity_detail.html
+++ b/UI/ui/templates/internal/entity_detail.html
@@ -12,7 +12,7 @@
 
 <div class="container d-flex justify-content-center">
     <div class="table-responsive shadow-sm rounded" style="width: 100%;">
-        {% if detail %}
+        {% if paginated_details %}
             <table class="table table-bordered table-striped align-middle">
                 <thead class="table-light">
                     <tr>
@@ -23,15 +23,15 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for key, value in detail.items %}
-                    <tr>
-                        <th class="text-nowrap">{{ key }}</th>
-                        <td>{{ value.Attribute }}</td>
-                        <td class="description-cell">{{ value.Description }}</td>
-                        <td>
-                            <button class="btn btn-sm btn-primary" onclick="editRow(this)">Edit</button>
-                        </td>
-                    </tr>
+                    {% for key, value in paginated_details %}
+                        <tr>
+                            <th class="text-nowrap">{{ key }}</th>
+                            <td>{{ value.Attribute }}</td>
+                            <td class="description-cell">{{ value.Description }}</td>
+                            <td>
+                              <button class="btn btn-sm btn-primary" onclick="editRow(this)">{% if key == "-1" %}Add New Detail{% else %}Edit{% endif %}</button>
+                            </td>
+                        </tr>
                     {% endfor %}
                 </tbody>
             </table>
@@ -45,6 +45,38 @@
         </div>
     </div>
 </div>
+
+<nav aria-label="Page navigation" class="mt-3">
+  <ul class="pagination justify-content-center">
+    {% if paginated_details.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page=1" aria-label="First">&laquo;&laquo;</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{ paginated_details.previous_page_number }}" aria-label="Previous">&laquo;</a>
+      </li>
+    {% else %}
+      <li class="page-item disabled"><span class="page-link">&laquo;&laquo;</span></li>
+      <li class="page-item disabled"><span class="page-link">&laquo;</span></li>
+    {% endif %}
+
+    <li class="page-item disabled">
+      <span class="page-link">Page {{ paginated_details.number }} of {{ paginated_details.paginator.num_pages }}</span>
+    </li>
+
+    {% if paginated_details.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ paginated_details.next_page_number }}" aria-label="Next">&raquo;</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{ paginated_details.paginator.num_pages }}" aria-label="Last">&raquo;&raquo;</a>
+      </li>
+    {% else %}
+      <li class="page-item disabled"><span class="page-link">&raquo;</span></li>
+      <li class="page-item disabled"><span class="page-link">&raquo;&raquo;</span></li>
+    {% endif %}
+  </ul>
+</nav>
 
 <script>
     window.unusedAttributes = {{ unused_attributes|safe }};
